# student-service

./: .gitignore  Makefile  docker-compose.yml
data/: V202106150800_common_baseline.sql  V202106232100_saint_baseline.sql  V202106241700_catholic_polity_baseline.sql  V202106302100_identity_baseline.sql  V202108162100_identity_add_user_group.sql  V202108291500_course_baseline.sql  V202108292000_student_baseline.sql  V202108292100_enrolment_baseline.sql
scripts/: ci_build.sh  terraform-enterprise-push.sh
student-app/: .gitignore  Cargo.toml  README.md
student-app/controller/: Cargo.toml
student-app/controller/src/: converter.rs  create_student.rs  delete_one_student_by_id.rs  delete_student.rs  get_one_student_by_id.rs  get_student_collection.rs  get_students.rs  lib.rs  update_student.rs  usecase_converter.rs
student-app/controller/src/openapi/: mod.rs  student.rs  student_upsert.rs  student_view.rs
student-app/controller/tests/: integration_test.rs
student-app/db-postgres/: Cargo.toml
student-app/db-postgres/src/: README.md  config.rs  db_column.rs  lib.rs
student-app/db-postgres/src/person_gateway/: find_one_person_by_id_adapter.rs  insert_person_adapter.rs  mod.rs  repository.rs  update_person_adapter.rs
student-app/db-postgres/src/polity_gateway/: find_one_polity_by_id.rs  mod.rs  repository.rs
student-app/db-postgres/src/saint_gateway/: find_one_saint_by_id.rs  mod.rs  repository.rs
student-app/db-postgres/src/student_gateway/: db_column.rs  delete_student_adapter.rs  find_one_student_by_id_adapter.rs  find_student_collection_adapter.rs  insert_student_adapter.rs  mod.rs  mutation.rs  query.rs  repository.rs  update_student_adapter.rs
student-app/db-postgres/tests/: integration_test.rs
student-app/domain/: Cargo.toml
student-app/domain/src/: lib.rs
student-app/domain/src/boundaries/: db_gateway_boundary.rs  mod.rs  shared_boundary.rs  usecase_boundary.rs
student-app/domain/src/entities/: mod.rs  person.rs  person_educational_stage.rs  person_foreign_language.rs  person_id_number.rs  person_language.rs  personal_id_number.rs  student.rs
student-app/domain/src/entity/: student.rs
student-app/domain/src/interactors/: mod.rs  student_converters.rs  student_mutation.rs  student_query.rs
student-app/domain/src/ports/: delete_student_port.rs  find_one_polity_by_id_port.rs  find_one_saint_by_id_port.rs  find_one_student_by_id.rs  find_one_student_by_id_port.rs  find_student_collection_port.rs  insert_person_port.rs  insert_student_port.rs  mod.rs  person_db_gateway.rs  polity_db_gateway.rs  saint_db_gateway.rs  student_db_gateway.rs  update_person_port.rs  update_student_port.rs
student-app/domain/src/ports/person/: find_one_person_by_id_port.rs  insert_person_port.rs  mod.rs  person_db_gateway.rs
student-app/domain/src/ports/person/models/: mod.rs  person_dbresponse.rs  person_mutation_dbrequest.rs
student-app/domain/src/ports/student/: insert_student_port.rs  mod.rs  student_db_gateway.rs  update_student_port.rs
student-app/domain/src/ports/student/models/: mod.rs  student_dbrequest.rs  student_dbresponse.rs  student_mutation_dbrequest.rs
student-app/domain/src/usecases/: create_student_usecase.rs  delete_one_student_by_id_usecase.rs  delete_student_usecase.rs  mod.rs  person_usecase_shared_models.rs  query_one_student_by_id_usecase.rs  query_student_collection_usecase.rs  query_student_usecase.rs  student_db_gateway.rs  student_usecase_shared_models.rs  update_student_usecase.rs
student-app/domain/src/usecases/student/: student_converters.rs
student-lambda/student/: .env.test  Cargo.toml  README.md
student-lambda/student/src/: README.md  build_response.rs  delete_student.rs  get_students.rs  lib.rs  main.rs  parse_request.rs  post_student.rs  put_student.rs
student-lambda/student/tests/: getter.rs  integration_test.rs  test_double.rs  test_simple_crud.rs
student-lambda/student/tests/common/: deleter.rs  getter.rs  mod.rs  poster.rs  putter.rs  request_builder.rs  test_data.rs
(+51 files in other folders)
