[package]
name = "controller"
version = "0.1.5"
authors = ["nhuthm080280 <nhuthm080280@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" , version = "0.1.5"}
tokio-postgres = "0.7.2"
db-postgres = { path = "../db-postgres", version = "0.1.5" }
uuid = "0.8"
dotenv = "0.15.0"
tokio = { version = "1.6.0", features = ["full"] }
hvcg_student_openapi_student = "0.0.2"