[package]
name = "controller"
version = "0.1.5"
authors = ["peterbean410 <peterbean410@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" , version = "0.1.5"}
tokio-postgres = "0.7.2"
db-postgres = { path = "../db-postgres", version = "0.1.5" }
uuid = "0.8"
tokio = { version = "1.6.0", features = ["full"] }
hvcg_academics_openapi_student = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
