[package]
name = "db-postgres"
version = "0.1.5"
authors = ["ntdat02092002 <datnt030902@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = {version = "0.7.2", features = ["with-uuid-0_8"]}
tokio = { version = "1.6.0", features = ["full"] }
domain = { path = "../domain", version = "0.1.5" }
#refinery = { version = "0.5", features = ["tokio-postgres"] }
#pg-embed = { version = "0.3" }
async-trait = "0.1.50"
uuid = "0.8"

[dev-dependencies]
dotenv = "0.15.0"
