[package]
name = "domain"
version = "0.1.5"
authors = ["nhuthm080280 <nhuthm080280@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
futures = "0.3.15"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.8.0", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
strum_macros = "0.21.1"
