[package]
name = "student"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_http = "0.3.0"

serde_json = "1.0"
controller = { path = "../../student-app/controller" }
domain = {path = "../../student-app/domain"}
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = "0.8"

[dev-dependencies]
dotenv = "0.15.0"
hvcg_student_openapi_student = "0.0.2"
